# micro-opcua

./: .clang-format  .gitignore  AGENTS.md  CLAUDE.md  CMakeLists.txt  LICENSE  Makefile  README.md  ROADMAP.md  optimize-hot-paths.md
.devcontainer/: devcontainer.json
.github/workflows/: ci.yml
.specify/: feature.json  init-options.json  integration.json
.specify/integrations/: agy.manifest.json  codex.manifest.json  speckit.manifest.json
.specify/memory/: constitution.md
.specify/templates/: plan-template.md  tasks-template.md
cmake/: MicroOpcUaCodegen.cmake  MicroOpcUaOptions.cmake  MicroOpcUaStaticAnalysis.cmake
docs/: api-reference.md  architecture.md  getting-started.md  integration-guide.md  migration-024-muc-opcua-rename.md
docs/adr/: 0001-build-and-test-workflow.md
docs/benchmarks/: speed-baseline.json  speed-benchmark.md
docs/conformance/: identity-policy.md  profile-embedded.md  profile-micro.md  profile-nano.md  security.md  services.md  status.md
docs/review/: embedded-readiness-review.md  optimization-audit-2026-06-27.md
docs/size/: audit-hardening-baseline.md  feature-size-ledger.md  pico-minimal-server.md
docs/traceability/: 004-optimization-fixes.md  005-embedded-profile-completion.md  012-opcua-pubsub.md  014-node-management.md  020-audit-hardening.md  conformance-claims.md  files-to-sections.md  fixtures.md  mcp-query-ledger.md  opcua-mcp-queries.md  sections-to-files.md
examples/: CMakeLists.txt
scripts/: check_build_matrix.sh  check_stack_usage.sh  measure_size.sh  run_speed_bench.py  size-report.sh
src/: CMakeLists.txt
src/core/: uasc.c  (+15 more)
tests/: CMakeLists.txt
tests/fuzz/: CMakeLists.txt  fuzz_activate_session.c  fuzz_binary_reader.c  fuzz_binary_types.c  fuzz_call.c  fuzz_message_chunk.c  fuzz_subscription_filters.c
(+275 files in other folders)
